--- a/src/lib/interface/styles/root.scss
+++ b/src/lib/interface/styles/root.scss
@@ -1,13 +1,20 @@
+@font-face {
+	font-family: 'geist_sans';
+	src: url('/asset/font/geist_sans.woff2');
+}
+
 * {
 	box-sizing: border-box;
 }
 
 body {
-	background: hsl(315 20% 30%);
+	background: hsl(315 10% 10%);
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	font-family: 'geist_sans';
+	height: 100vh;
 	margin: 0;
-}
-
-.geist {
-	margin: 0 auto;
-	max-width: 1200px;
+	max-height: 100vh;
+	width: 100%;
 }
